# jankins

./: .dockerignore  .gitignore  .mailmap  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MCP_REGISTRY_SUBMISSION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RELEASE_NOTES_v0.2.0.md  SECURITY.md  TOOLS_REFERENCE.md  WORKFLOWS.md  docker-compose.yml  pyproject.toml  tox.ini
.github/: BRANCH_PROTECTION.md  COMMIT_CONVENTION.md  PAT_SETUP.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security.yml
.github/workflows/: auto-merge.yml  ci.yml  dependabot-auto-approve.yml  release.yml  sbom.yml  semantic-release.yml
.sbom/: sbom-cyclonedx.json  sbom-spdx.json
docs/: DEPLOYMENT.md  MONITORING.md  OPERATIONAL_EXCELLENCE.md  RUNBOOKS.md  grafana-dashboard.json
src/jankins/: __init__.py  __main__.py  cache.py  config.py  errors.py  logging_utils.py  metrics.py  server.py
src/jankins/analyzers/: __init__.py  base.py  gradle.py  maven.py  npm.py
src/jankins/formatters/: __init__.py  base.py  token_aware.py
src/jankins/jenkins/: __init__.py  adapter.py  blueocean.py  progressive.py  testresults.py
src/jankins/mcp/: __init__.py  protocol.py  stdio_transport.py  transport.py
src/jankins/middleware/: __init__.py  ratelimit.py
src/jankins/prompts/: __init__.py  templates.py
src/jankins/tools/: __init__.py  advanced.py  builds.py  health.py  jobs.py  logs.py  scm.py  tests.py
tests/: __init__.py  conftest.py  test_analyzers.py  test_blueocean.py  test_cache.py  test_config.py  test_errors.py  test_formatters.py  test_mcp_protocol.py  test_metrics.py  test_ratelimit.py  test_stdio_transport.py  test_testresults.py
